# mini-antemortem-cli

./: .gitignore  AUTHORS.md  EASY_README.md  EASY_README_KR.md  IP_DEFENSE_CHECKLIST.md  NOTICE  PRE_EXISTING_IP.md  README.md  pyproject.toml
src/mini_antemortem_cli/: __init__.py  cli.py  traps.py
src/mini_antemortem_cli/mcp/: __init__.py  __main__.py  server.py
tests/: test_canonicalization.py  test_cli.py  test_mcp_execution.py  test_mcp_server.py  test_mcp_workspace_boundary.py  test_traps.py  test_variant_jaccard.py
